# Odin

./: .clang-format  .clangd  .gitignore  .gitmodules  .tmuxify.toml  CMakeLists.txt  Makefile  Model.info  README.md  TODO.md  Todo.md  \  bat  bench_log.txt  codec.py  llama-3.2-model.info  prompt.txt  qwen-2.5-model.info  run.py
builder/: main.cpp
cmake/: downloadFile.cmake  downloads.cmake  libs.cmake  tar.cmake  target.cmake
docs/: api.md
include/: bidirectional_map.hpp  block.hpp  chanel.hpp  client.hpp  config.hpp  contagious_linked_list.hpp  debug.hpp  engine.hpp  engine_utils.hpp  errors.hpp  formatter.hpp  forward.hpp  gguf.hpp  ggufreader.hpp  http-manager.hpp  ipc_manager.hpp  json-tokeniser.hpp  json_tokeniser.hpp  llama3_tokenizer.hpp  logging.hpp  model.hpp  model_utils.hpp  modelclass.hpp  multiclient-httpmanager.hpp  network.hpp  networkmanager.hpp  orchestra.hpp  qwen2_tokeniser.hpp  span.hpp  stream_buffer.hpp  streambuffer.hpp  tokeniser.hpp  tokeniser_from_json.hpp  tokenizer.hpp  types.hpp  unidirectional_map.hpp  vector.hpp  vector_backend_linked_list.hpp  welcome.hpp
include/data_structures/: bidirectional_map.hpp  lock_free_ring_buffer.hpp  obj_pool.hpp  unidirectional_map.hpp
include/engine/: engine.hpp  engine_utils.hpp  forward.hpp
include/gguf/: gguf.hpp  ggufreader.hpp
include/http/: http-manager.hpp
include/ipc/: ipc_manager.hpp
include/ipc/multiclient/: ipc_manager.hpp
include/network/: network_manager.hpp  stream_buffer.hpp
include/network/multiclient/: network_manager.hpp
include/paged/: attention.hpp  pagedkv.hpp
include/tokeniser/: formatter.hpp  json_tokeniser.hpp  tok-to-bin.hpp
interface/: index.html  style.css
protocol/: packet.proto
src/: block.cpp  engine.cpp  gguf.cpp  http-server.cpp  main-utility.hpp  main.bak  main.cpp  stream_buffer.cpp  welcome.cpp  welcome.hpp
src/Encoder/: Encoder.cpp  Encoder.h
src/GGUF/: gguf.h
src/Model/: model.h
src/Types/: Types.h
src/Utils/: Utils.h
src/engine/: engine_impl.cpp  forward.cpp
src/gguf/: gguf.cpp  gguf.h  ggufreader.cpp
src/http/: http-manager.cpp  multiclient-manager.cpp
src/http/experimental/: multiclient-manager.cpp
src/ipc/: ipc_manager.cpp
src/tokeniser/: json_tokeniser.cpp
tests/: cli.cpp  contagious_linked_list.cpp  engine_network_inference.cpp  haf.py  http-server.cpp  inference_client.cpp  json-tokeniser.cpp  json_tokeniser.cpp  json_tokeniser_test.cpp  llama.cpp  llama_inference.cpp  llama_test.cpp  llama_tokeniser.cpp  multiclient_server.cpp  network_client.cpp  network_server.cpp  network_stack.cpp  object_pool.cpp  paged_attention.cpp  prompt.cpp  qwen_metrics.cpp  qwen_tokenizer.cpp  stress_test.py  test.cpp  tokeniser.py  tui.cpp  vblist.cpp
